--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 </head>
 <body ng-app="app">
 	<ui-view></ui-view>
-	<script src="node_modules/angular/angular.js"></script>
-	<script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-	<script src="app/app.js"></script>
+	<script src="build/bundle.js"></script>
 </body>
 </html>
